# IORhine

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  IO-CAM-ARCHITECTURE.md  README.md  docker-compose.real.yml  docker-compose.yml  mimari.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
controlOS_demo-youtube_2021-05-18/: README.md
io-cam-runtime/: .env.example  Dockerfile  README.md  pyproject.toml
io-cam-runtime/app/: __init__.py  main.py  services.py
io-cam-runtime/app/api/: calibration.py  camera.py  job.py  motion.py  vision.py  ws.py
io-cam-runtime/app/config/: motion.json  runtime_store.py  settings.py
io-cam-runtime/app/glue_sheet/: __init__.py  controller.py
io-cam-runtime/app/motion/: __init__.py  config_store.py  controller.py  gcode_driver.py  kinematics.py  mock_driver.py  serial_config.py
io-cam-runtime/app/runtime/: __init__.py  camera.py  camera_sources.py  csv_loader.py  events.py  job_runner.py  state.py
io-cam-runtime/app/vision/: __init__.py  calibration.py  detector.py  fast_detect.py  pca_angle.py  template_loader.py
io-cam-runtime/calibration/: camera_source.json  glue_sheet.json  vision.json
io-cam-runtime/io_cam_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
io-cam-runtime/scripts/: e2e_mock.sh
io-cam-runtime/tests/: test_camera_api.py  test_csv_loader.py  test_fast_detect.py  test_gcode_driver.py  test_glue_sheet.py  test_glue_sheet_api.py  test_job_runner_e2e.py  test_motion_controller.py  test_template_loader.py  test_vision_detector.py
public/: manifest.json
(+76 files in other folders)
